--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Instalar dependências
         run: npm install
 
+      - name: Instalar jest
+        run: npm install --save-dev jest
+
       - name: Rodar testes
         run: npm test
 
